[package]
name = "shttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.4"
log = "0.4.22"

[build-dependencies]
copy_to_output = "2.2.0"

[dev-dependencies]
env_logger = "0.11.4"
